[package]
name = "interstellar_crawler"
version = "0.1.0"
edition = "2021"
description = "TARS-Controlled Domain Enumeration Protocol"
license = "Apache-2.0"
authors = ["NASA/Cooper Station Engineering"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
scraper = "0.14"
url = "2.4"
dashmap = "5.4"
flume = "0.10"
rand = "0.8"
chrono = "0.4"
scylla = "0.14"    # or a recent version
dotenv = "0.15"
serde_json = "1.0"
once_cell = "1.17"
publicsuffix = "2.3.0"
